syntax = "proto3";

package ampb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/dj-yacine-flutter/gojo/pb/ampb";

message AnimeMovieVideoRequest {
    int32 languageID = 1;
    string authority  = 2;
    string referer  = 3;
    string link  = 4;
    string quality  = 5;
}

message AnimeMovieVideoResponse {
    int64 ID = 1;
    int32 languageID = 2;
    string authority  = 3;
    string referer  = 4;
    string link  = 5;
    string quality  = 6;
    google.protobuf.Timestamp createdAt = 7;
}
