syntax = "proto3";

package aspb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/dj-yacine-flutter/gojo/pb/aspb";


message AnimeSerieTorrentRequest {
    int32 languageID  = 1;
    string fileName = 2;
    string torrentHash  = 3;
    string torrentFile  = 4;
    int32 seeds  = 5;
    int32 peers  = 6;
    int32 leechers  = 7;
    int64 sizeBytes = 8;
    string quality  = 9;
}

message AnimeSerieTorrentResponse {
    int64 ID = 1;
    int32 languageID  = 2;
    string fileName = 3;
    string torrentHash  = 4;
    string torrentFile  = 5;
    int32 seeds  = 6;
    int32 peers  = 7;
    int32 leechers  = 8;
    int64 sizeBytes = 9;
    string quality  = 10;
    google.protobuf.Timestamp createdAt = 11;
}